[tool.poetry]
name = "nosyms"
version = "0.1.0"
description = ""
authors = ["Niklas Beierl"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
pandas = "^1.2.3"
# Applied some modifications to volatility for the sake of speed
volatility = { path = "../volatility3", develop = true }
networkx = "^2.5.1"
dgl = "^0.6.1"
torch = "^1.8.1"
matplotlib = {version = "^3.4.1", optional = true}
Pebble = "^4.6.1"

[tool.poetry.dev-dependencies]
black = "^21.4b1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
