[tool.poetry]
name = "nosyms"
version = "0.1.0"
description = ""
authors = ["Niklas Beierl"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
networkx = "^2.5.1"
dgl = "^0.6.1"
torch = "1.8.1"
matplotlib = { version = "^3.4.1", optional = true }
Pebble = "^4.6.1"
# Applied some modifications to volatility for the sake of speed
# volatility3 = { path = "../volatility3", develop = true }
volatility3 = { version = "^1.0.1", optional = true }
bidict = "^0.21.2"
scikit-learn = "^0.24.2"
humanize = "^3.7.1"
interlap = "^0.2.7"
seaborn = { version = "^0.11.1", optional = true }
plot-metric = { version = "^0.0.6", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.4b1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
vol = ["volatility3"]
plotting = ["matplotlib", "seaborn", "plot-metric"]

[tool.black]
line-length = 120
